2013-04-08  6.8.4-9 Cristy  <quetzlzacatenango@image...>
  * Pass JP2 format type to decoder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23038).

2013-04-07  6.8.4-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-8, SVN revision 11743.

2013-04-06  6.8.4-8 Cristy  <quetzlzacatenango@image...>
  * Include intensity type in the MIFF metadata.

2013-04-06  6.8.4-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-7, SVN revision 11720.

2013-04-05  6.8.4-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Fix -sample sampling point to midpoints of sampling areas
  * add a "sample:offset=" define to allow users to adjust this
    sampling point position in terms of percentage (default = 50x50)

2013-04-02  6.8.4-7 Glenn Randers-Pehrson <glennrp@image...>
  * Don't write a PNG gAMA or cHRM chunk when writing the iCCP or sRGB chunk.

2013-04-02  6.8.4-7 Cristy  <quetzlzacatenango@image...>
  * Return MagickWand for the library name for Wand.pc.
  * The LCH colorspace makes the round-trip now.
  * Revert the default upsampling algortithm for JPEG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23100).
  * Prevent fault when temporary directory is not-writable (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23117).

2013-04-01  6.8.4-7 Bastien Roucaries  <roucaries.basti...>
  * Prepare X11 support as a plugin.
  * Fix compilation under HPUX of perlmagick

2013-04-01  6.8.4-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-6, SVN revision 11640.

2013-04-01  6.8.4-6 Cristy  <quetzlzacatenango@image...>
  * The -clut option return a luma grayscale instead of the expected luminance.
  * Add moduledir variable to MagickCore.pc to support the MagickFilter and
    MagickCore kits.
  * Caption fits the sized area (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23085).

2013-03-31  6.8.4-5 Cristy  <quetzlzacatenango@image...>