@@ -1,3 +1,6 @@
+2013-04-10  6.8.4-9 Anthony Thyssen <A.Thyssen@griffith...>
+  * Save the calculated angle for "deskew" as the artifact "deskew:angle"
+
 2013-04-08  6.8.4-9 Cristy  <quetzlzacatenango@image...>
   * Pass JP2 format type to decoder (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23038).
